@@ -1258,7 +1258,7 @@ struct rxvt_term : zero_initialized, rxvt_vars, rxvt_screen {
   void set_icon_name (const char *str);
   void set_window_color (int idx, const char *color);
   void set_colorfgbg ();
-  int rXParseAllocColor (rxvt_color * screen_in_out, const char *colour);
+  bool set_color (rxvt_color &color, const char *name);
   void set_widthheight (unsigned int newwidth, unsigned int newheight);
 
   // screen.C
